# salad_tournament

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yaml.dev  docker-compose.yml  pyproject.toml
badminton/: admin.py  urls.py
badminton/management/commands/: clean.py  seed_players.py
badminton/migrations/: 0001_initial.py  0002_club_player_club.py  0002_competitor_is_playing.py  0002_user_gender.py
badminton/models/: __init__.py  club.py  competitor.py  partner.py  player.py  tournament.py  user.py
badminton/serializers/: __init__.py  club.py  competitor.py  player.py  tournament.py  user.py
badminton/services/: __init__.py  match_service.py  tournament_service.py
badminton/tests/models/: test_competitor.py  test_player.py  test_tournament.py
badminton/tests/services/: test_tournament.py
badminton/views/: __init__.py  club.py  competitor.py  pairing.py  player.py  result.py  tournament.py  user.py
core/: settings.py  urls.py
nginx/: default.conf
scripts/: deploy.sh  entrypoint.sh  wait-for.sh
