[tool.poetry]
name = "badminton"
version = "0.1.0"
description = "bad"
authors = ["Erik Aouizerate <erik.aouizerate@mintset.io>"]
readme = "README.md"
packages = [{include = "badminton"}]  # Adjust package name if necessary
include = [".env"]

[tool.poetry.dependencies]
python = "<4, >=3.12"
django = ">=5.1.6,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
gunicorn = ">=23.0.0,<24.0.0"
drf-yasg = "^1.21.9"
django-environ = "^0.12.0"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
